--- a/app/templates/auth/_rules_content.html
+++ b/app/templates/auth/_rules_content.html
@@ -1,30 +1,30 @@
 <div id="rules_content" class="lh">
-		<section>
+		<section id="rules_terms">
 		    <h2>Загальні положення</h2>
             <div class="list-group">
-    	        <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">
+    	        <a href="{{ url_for('auth.accept_order')+'#rule-1-1' }}" id="rule-1-1" class="list-group-item list-group-item-action list-group-item-secondary">
 
-                    <b>1.1</b>  Мовою спілкування на форумі є <b>українська</b>. Якщо у вас з українською мовою проблеми, ви можете використовувати будь-який інший форум такої ж тематики. Використання цитат, відео, зображень, посилань та іншого  контенту іноземною мовою (а особливо російською мовою) не вітається на форумі. Виключенням з правила є англійська мова. Якщо іншого варіанту немає, то обов'язково:
+                    <b>1.1</b>  Мовою спілкування на форумі є <b>українська</b>. Якщо у вас з українською мовою проблеми, ви можете використовувати будь-який інший форум такої ж тематики. Використання цитат, відео, зображень, посилань та іншого  контенту іноземною мовою (а особливо російською мовою) не вітається на форумі. Виключенням з правила є англійська мова. Якщо іншого варіанту немає, то обов`язково:
                     <ul>
                         <li> контент закриваємо спойлером;</li>
                         <li>в дужках вказуємо мову.</li>
                     </ul>
                 </a>
-    	        <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">
+    	        <a href="{{ url_for('auth.accept_order')+'#rule-1-2' }}" id="rule-1-2" class="list-group-item list-group-item-action list-group-item-secondary">
                     <b>1.2</b>  Розміщення тем у розділі <b>"Оцінка сайтів"</b> допускається, якщо сайт створений з метою покращення українського інтернету або являє собою приклад розвитку автора як веб-розробника, тобто з описанням всіх технологій та особливостей реалізації.
                 </a>
-    	        <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">
+    	        <a href="{{ url_for('auth.accept_order')+'#rule-1-3' }}" id="rule-1-3" class="list-group-item list-group-item-action list-group-item-secondary">
                     <b>1.3</b>  Теми, які не відповідають вимогам діючих правил, переносяться модератором відповідного розділу <b>"Кошик для сміття"</b> і закриваються.
                 </a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">
+                <a href="{{ url_for('auth.accept_order')+'#rule-1-4' }}" id="rule-1-4" class="list-group-item list-group-item-action list-group-item-secondary">
     	           <b>1.4</b>  <b>Адміністратор та модератори</b> мають право редагувати, видаляти і переносити будь-які повідомлення, якщо вважатимуть це за потрібне.
                 </a>
-    	        <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">
+    	        <a href="{{ url_for('auth.accept_order')+'#rule-1-5' }}" id="rule-1-5"class="list-group-item list-group-item-action list-group-item-secondary">
                     <b>1.5</b>  Якщо вам допомогли на форумі не забувайте про допомогу і нам. Розміщуйте пости в соціальних мережах та блогах про нас. Також користувачу, який вам допоміг буде приємно, якщо ви натиснете на "дякую".
                 </a>
             </div>
         </section>
-        <section>
+        <section id="rules_forbidden">
 		    <h2>Заборонено</h2>
             <div class="list-group">
                 <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">
@@ -58,43 +58,72 @@
                     <b>2.10</b>Обговорення політики та політичних новин заборонено.
                 </a>
             </div>
-        </section>
+        </section id="rules_create_publications">
 		    <h2>Створення теми, публікація повідомлень</h2>
             <div class="list-group">
-                <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">
+                <a href="{{ url_for('auth.accept_order')+'#rule-3-1' }}" id="rule-3-1"  class="list-group-item list-group-item-action list-group-item-secondary">
                     <b>3.1</b>  Перед створенням теми, переконайтесь, що схожої теми не існує. Для цього можна скористатись пошуком.
                 </a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">
+                <a href="{{ url_for('auth.accept_order')+'#rule-3-2' }}" id="rule-3-2" class="list-group-item list-group-item-action list-group-item-secondary">
                     <b>3.2</b>   Перед створенням теми, <b>переконайтесь, що ви розміщуєте її в розділі відповідної тематики</b>. Старайтесь правильно формулювати ваші запитання та оформлювати їх відповідно. <font color="#b11">Не забувайте про наявність тегів code</font>.
                 </a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">
+                <a href="{{ url_for('auth.accept_order')+'#rule-3-3' }}" id="rule-3-3" class="list-group-item list-group-item-action list-group-item-secondary">
                     <b>3.3</b>  Назва теми має бути інформативною і максимально чітко відображати зміст проблеми.
                     <font color="green">
-    	               <h4>Правильно:</h3>
-        "Масив (парність та непарність)",
-        "Обробка текстового файлу з числами",
-        "Smarty (та інші шаблонізатори) - чи доречно застосовувати?".
+    	                <h4>Правильно:</h3>
+                        <ul>
+                            <li>"Масив (парність та непарність)",</li>
+                            <li>"Обробка текстового файлу з числами",</li>
+                            <li>"Smarty (та інші шаблонізатори) - чи доречно застосовувати?".</li>
+                        </ul>
                     </font>
-   		 Не правильно:
-        "Допоможіть розв'язати задачу",
-        "Потрібна допомога",
-        "Терміново".
-    	Бажано в повідомленні вказувати наступне:
-        мову програмування
-        середовище в якому працюєте
-        фрагменти непрацюючого коду
-        описуєте з чим у вас виникли проблеми
-    	Теми без будь-яких напрацювань будуть просто ігноруватись учасниками форуму, а модератори при першій можливості перенесуть їх в кошик для сміття.
-    	В одній темі – одне питання. Не потрібно розміщювати декілька тем з однаковим питанням або в одній темі десяток запитань.
-    	Старайтесь не допускати граматичних помилок, поважайте учасників форуму.
-    	Якщо у вас є запитання, то його слід задавати на форумі. Категорично заборонене приставання до учасників форуму з приватними повідомленнями, Skype, ICQ або e-mail без їх згоди на це.
-    	Якщо ви використовуєте дуже великі фрагменти коду або великі цитати, доцільним є використання спойлера.
-
-		Додатково
-
-    	Як стати членом Replace Group (доступ в прихований розділ).
-    	Як стати членом Replace Team (модератором).
-    	Якщо у ває є цікавий сайт IT-тематики або ви хочете обмінятись посиланнями, то надсилайте повідомлення Replace будь-яким зручним для вас способом.
-
-        </div>
+                    <font color="#b11">
+   		                <h4>Не правильно:</h4>
+                    </font>
+                        <ul>
+                            <li>"Допоможіть розв`язати задачу",</li>
+                            <li>"Потрібна допомога",</li>
+                            <li>"Терміново".</li>
+                        </ul>
+                    <a href="{{ url_for('auth.accept_order')+'#rule-3-4' }}" id="rule-3-4" class="list-group-item list-group-item-action list-group-item-secondary">
+                        <b>3.4</b>  Бажано в повідомленні вказувати наступне:
+                        <ul>
+                            <li>мову програмування</li>
+                            <li>середовище в якому працюєте</li>
+                            <li>фрагменти непрацюючого коду</li>
+                            <li>описуєте з чим у вас виникли проблеми</li>
+                        </ul>
+                    <a href="{{ url_for('auth.accept_order')+'#rule-3-5' }}" id="rule-3-5" class="list-group-item list-group-item-action list-group-item-secondary">
+                        <b>3.5</b>  Теми <b>без будь-яких напрацювань</b> будуть просто ігноруватись учасниками форуму, а модератори при першій можливості перенесуть їх в кошик для сміття.
+                    </a>
+                    <a href="{{ url_for('auth.accept_order')+'#rule-3-6' }}" id="rule-3-6" class="list-group-item list-group-item-action list-group-item-secondary">
+                        <b>3.6</b>   В одній темі – одне питання. Не потрібно розміщювати декілька тем з однаковим питанням або в одній темі десяток запитань.
+                    </a>
+                    <a hhref="{{ url_for('auth.accept_order')+'#rule-3-7' }}" id="rule-3-7" class="list-group-item list-group-item-action list-group-item-secondary">
+                        <b>3.7</b>  Старайтесь не допускати граматичних помилок, <b>поважайте учасників форуму</b>.
+                    </a>
+                    <a href="{{ url_for('auth.accept_order')+'#rule-3-8' }}" id="rule-3-8" class="list-group-item list-group-item-action list-group-item-secondary">
+                        <b>3.8</b>   Якщо у вас є запитання, то його слід задавати на форумі. Категорично заборонене приставання до учасників форуму з приватними повідомленнями, Skype, ICQ або e-mail без їх згоди на це.
+                    </a>
+    	           <a href="{{ url_for('auth.accept_order')+'#rule-3-9' }}" id="rule-3-9" class="list-group-item list-group-item-action list-group-item-secondary">
+                        <b>3.9</b>  Якщо ви використовуєте дуже великі фрагменти коду або великі цитати, доцільним є використання спойлера.
+                    </a>
+                </div>
+            <section id="rules_other">
+		        <h2>Додатково</h2>
+                <div class="list-group">
+                    <a href="{{ url_for('auth.accept_order')+'#rule-4-1' }}" id="rule-4-1" class="list-group-item list-group-item-action list-group-item-secondary">
+    	                <b>4.1</b>  Як стати членом <b>Replace Group</b><!--тут повинен бути лінк на відповідну тему типу"https://replace.org.ua/topic/131/" --> (доступ в прихований розділ).
+                    </a>
+    	            <a href="{{ url_for('auth.accept_order')+'#rule-4-2' }}" id="rule-4-2" class="list-group-item list-group-item-action list-group-item-secondary">
+                        <b>4.2</b> Як стати членом <b>Replace Team</b><!--тут повинен бути лінк на відповідну тему "https://replace.org.ua/topic/238/" --> (модератором).
+                    <a href="{{ url_for('auth.accept_order')+'#rule-4-3' }}" id="rule-4-3" class="list-group-item list-group-item-action list-group-item-secondary">
+                        <b>4.3</b> 	Якщо у ває є цікавий сайт IT-тематики або ви хочете обмінятись посиланнями, то надсилайте повідомлення <b>Replace</b><!--тут повинен бути лінк на профіль реплейса "https://replace.org.ua/user/2/" --> будь-яким зручним для вас способом.
+                    </a>
+                    <a href="{{ url_for('auth.accept_order')+'#rule-4-4' }}" id="rule-4-4" class="list-group-item list-group-item-action list-group-item-secondary">
+                        <b>4.4</b>  Будь-які пропозиції та зауваження ви можете залишити в <b>спеціальній темі</b><!--тут повинен бути лінк на відповідну тему <!--https://replace.org.ua/topic/17/-->
+                    </a>
+                </div>
+            </section>
+        
 	</div>
