--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,11 +6,13 @@
 	{% else %}
 		KinoManiak
 	{% endif %}
+
 {% endblock %}
 
 
 {% block navbar %}
-   <nav class="navbar navbar-default">
+
+    <nav align="center" class="navbar navbar-default navbar-static-top"  data-spy="affix" style="top:0;left:0; right:0; width:100%;" data-offset-top="100" >
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -53,7 +55,8 @@
 
 
 {% block content %}
-    
+    <div class="go-down" title="Вниз" id='OnBottom'>⇩</div>
+        
     {% if current_user.is_anonymous and title not in ['Вхід', 'Реєстрація', 'Запит на ресетування паролю', 'Ресетування паролю'] %}
     <div  class="container-fluid">
     
@@ -77,13 +80,15 @@
         {% endif %} 
         {% endwith %}
 		{% block app_content %}{% endblock %}
-	</div>
-
+    </div>
+    <div class="go-down" title="Вниз" id='OnBottom'>⇩</div>
+    
     <div class="fixed-sm-bottom text-light ">
         <br>
         <p align="center" style="color: grey">Контакти для співпраці: <a href="mailto:sahand6@gmail.com">shanand6@gmail.com</a></p>
         <p align="center" style="color: grey">© 2012–2020 Український форум програмістів. Всі права захищені</p>
     </div>
+
 </div>
 {% endblock %}
 
