--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,7 @@
 
 {% block navbar %}
 
-    <nav class="navbar navbar-default navbar-static-top"  data-spy="affix" style="top:0;left:0; right:0; width:100%;" data-offset-top="100">
+    <nav class="navbar navbar-default navbar-static-top" id="navbar" data-spy="affix" style="top:0;left:0; right:0; width:100%;" data-offset-top="100">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -44,38 +44,33 @@
                     <li><a href="{{ url_for('auth.login') }}">Вхід</a></li>
                     {% else %}
                     <li><a href="{{ url_for('main.user', username=current_user.username) }}">Профіль</a></li>
-                    <li><a href="{{ url_for('auth.logout') }}">Вихід'</a></li>
+                    <li><a href="{{ url_for('auth.logout') }}">Вихід</a></li>
                     {% endif %}
                 </ul>
             </div>
         </div>
         <hr>
+        <div class="text-center">
+            {% if current_user.is_anonymous and title not in ['Вхід', 'Реєстрація', 'Запит на ресетування паролю', 'Ресетування паролю'] %}
+            <hr>
+            <b>Ласкаво просимо!</b><br>
+
+            Ласкаво просимо вас на україномовний форум з програмування, веб-дизайну, SEO та всього пов'язаного з інтернетом та комп'ютерами.
+            Будемо вдячні, якщо ви поділитись посиланням на <a href="replace.org.ua ">Replace.org.ua</a> на інших ресурсах.
+            Для того щоб створювати теми та надсилати повідомлення вам потрібно <li><a href="{{ url_for('auth.login') }}">Ввійти</a> або <a href="{{ url_for('auth.accept_order') }}">Зареєструйтеся</a>.
+        {% endif %}
+        </div>
     </nav>
 {% endblock %}
 
 
 {% block content %}
     <div id="ToTop"></div><!--Маркер для  кнопок прокрутки-->
-    <div class="my_buttons" id="my_buttons" style="opacity:0.5; position: fixed;z-index:2147483647;top:100px;left:0;">
+    {% if title not in ['Вхід', 'Реєстрація', 'Запит на ресетування паролю', 'Ресетування паролю'] %}
         <!--Кнопки прокрутки-->
-        <a href="#ToTop"  class="badge bg-primary text-wrap"  title="Вверх" id='to-top'><h4>⇧</h4></a>
-        <a href="#OnBottom"   class="badge bg-primary text-wrap"  title="Вниз" id='on-bottom'><h4>⇩</h4></a>
-    </div>
-
-    
-        
-    {% if current_user.is_anonymous and title not in ['Вхід', 'Реєстрація', 'Запит на ресетування паролю', 'Ресетування паролю'] %}
+        <a href="#ToTop"  class="badge bg-primary text-wrap"  title="Вверх" id='to-top' style="opacity:0.4; position: fixed;z-index:2147483647;top:90px; right:8px;"><h5>⇧</h5></a>
+        <a href="#OnBottom"   class="badge bg-primary text-wrap"  title="Вниз" id='on-bottom' style="opacity:0.4; position: fixed;z-index:2147483647;bottom:15px; right:8px;"><h5>⇩</h5></a>
     <div  class="container-fluid">
-    
-        <div class="text-center">
-        <b>Ласкаво просимо!</b><br>
-
-        Ласкаво просимо вас на україномовний форум з програмування, веб-дизайну, SEO та всього пов'язаного з інтернетом та комп'ютерами.
-
-        Будемо вдячні, якщо ви поділитись посиланням на <a href="replace.org.ua ">Replace.org.ua</a> на інших ресурсах.
-
-        Для того щоб створювати теми та надсилати повідомлення вам потрібно Зареєструватись.
-        </div>
     <hr>
     {% endif %}
 	<div class="conteiner">
