--- a/app/templates/login/login.html
+++ b/app/templates/login/login.html
@@ -20,7 +20,7 @@
         <br><br>
         <p>
         	<b>Можливо вам потрібно</b>
-            <a href="{{ url_for('auth.accept_order') }}">Зареєструйтеся</a><b> або одержати ? </b><a href="{{ url_for('auth.reset_password_request') }}"> новий пароль</a> перед входом на форум?
+            <a href="{{ url_for('register.accept_order') }}">Зареєструйтеся</a><b> або одержати ? </b><a href="{{ url_for('login.reset_password_request') }}"> новий пароль</a> перед входом на форум?
         </p>
  </div>
 {% endblock %}
