--- a/app/templates/register/accept_order.html
+++ b/app/templates/register/accept_order.html
@@ -15,7 +15,7 @@
     </div>
 	</div>
 	<hr>
-	{% include 'auth/_rules_content.html' %}
+	{% include '_rules_content.html' %}
 	<div align="center">
 		<div class="col">
 			{{ wtf.quick_form(form)}}
