--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,17 +1,22 @@
 {% extends 'bootstrap/base.html' %}
+{% block head %}
+    <link rel="icon"  href="{{ url_for('static', filename='favicon.ico') }}" >
 
-{% block title %}
+   
 	{% if title %}
-    	{{ title }} - REPLACE
+    	{{ title }} - Український форум програмістів
 	{% else %}
-		KinoManiak
+		Український форум програмістів
 	{% endif %}
-
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 {% endblock %}
 
-
+    
 {% block navbar %}
-
+    
     <nav class="navbar navbar-default navbar-static-top" id="navbar" data-spy="affix" style="top:0;left:0; right:0; width:100%;" data-offset-top="100">
         <div class="container">
             <div class="navbar-header">
