--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,5 @@
 {% extends 'bootstrap/base.html' %}
+{% import 'bootstrap/wtf.html' as wtf %}
 {% block head %}
     <link rel="icon"  href="{{ url_for('static', filename='favicon.ico') }}" >
 
