--- a/app/templates/register/register.html
+++ b/app/templates/register/register.html
@@ -3,7 +3,7 @@
 
 {% block app_content %}
 	<div class="container" id="registration">
-		<h1>{{ _('Register') }}</h1>
+		<h1>{{ 'Реєстрація' }}</h1>
 		<div class="row">
 			<div class="col-sm-4">
 				{{ wtf.quick_form(form)}}
