--- a/app/templates/register/set_password.html
+++ b/app/templates/register/set_password.html
@@ -2,8 +2,11 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-	<div class="container" id="registration">
-	
-
+	<h2>Пароль</h2>
+	<div class="row">
+		<div class="col-md-4">
+		
+			{{ wtf.quick_form(form) }}
+		</div>
 	</div>
 {% endblock %}
